--- a/css/style.css
+++ b/css/style.css
@@ -397,3 +397,18 @@ body{
     text-align: center;
     font-size: 30px;
 }
+
+/*PAGE ABOUT READING*/
+
+.images-reading{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    text-align: center;
+}
+
+.images-reading-caption{
+    text-align: center;
+    font-size: 25px;
+}
